New transaction scheme
Users can submit transaction from
community page. Users can't just send
arbitrary money to arbitrary people.
Needs to be part of a skill exchange.

On initial proposal, a message is sent.
That can then be accepted, which triggers
another message suggesting time and place.

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -248,6 +248,23 @@ input.activity-checkbox {
 
 // Transaction page
 
+.request {
+  margin: 10px 0;
+}
+
+.request img {
+  width: 75px;
+  vertical-align: initial;
+}
+
+.request .accept {
+  cursor: pointer;
+}
+
+.request-message {
+  display: inline-block;
+}
+
 .transaction-table {
   width: 100%;
 }
