Add some margin to timestamp
So it's not so squished against edge of page

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -321,6 +321,7 @@ input.activity-checkbox {
 .message-snippet .snippet-text .timestamp {
   float: right;
   font-size: 11px;
+  margin-right: 5px;
 }
 
 .message-snippet .snippet-text .sender {
