--- a/public/css/main.less
+++ b/public/css/main.less
@@ -313,6 +313,7 @@ input.activity-checkbox {
 .message-snippet .snippet-text .timestamp {
   float: right;
   font-size: 11px;
+  margin-right: 5px;
 }
 
 .message-snippet .snippet-text .sender {
