Add correct link to github project.

--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -4,4 +4,4 @@ footer
     a.pull-left(href="/privacy") &nbsp;Privacy Policy
     ul.pull-right.list-inline
       li
-        a(href='https://github.com/rmacqueen') GitHub Project
+        a(href='https://github.com/rmacqueen/bazaar') See the code on GitHub
