Add functionality to confirm exchanges.
Add an endpoint for confirming exchanges took
place. To avoid race conditions, we use the
bulkWrite method.

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -269,6 +269,11 @@ input.activity-checkbox {
   width: 100%;
 }
 
+.transaction-table .confirm {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .rating {
   unicode-bidi: bidi-override;
   direction: rtl;
