Fix fallout from rebase

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,11 +1,10 @@
-@import "themes/default/variables";
+@import "themes/flatly/variables";
 
 @import "lib/bootstrap/bootstrap";
 @import "lib/bootstrap-social";
 @import "lib/font-awesome/font-awesome";
-@import "lib/jquery-ui";
 
-@import "themes/flatly";
+@import "themes/flatly/flatly";
 
 // Scaffolding
 // -------------------------
