--- a/views/splash.jade
+++ b/views/splash.jade
@@ -139,11 +139,11 @@ html
         ul.copyright
           li © Bazaar
     // Scripts
-    != js('application')
+    script(src='/js/lib/jquery-2.2.0.min.js')
     script(src='/js/lib/jquery.scrollex.min.js')
     script(src='/js/lib/jquery.scrolly.min.js')
-    script(src='js/skel.min.js')
-    script(src='js/util.js')
+    script(src='/js/skel.min.js')
+    script(src='/js/util.js')
     //if lte IE 8
-      script(src='js/ie/respond.min.js')
-    script(src='js/splash.js')
+      script(src='/js/ie/respond.min.js')
+    script(src='/js/splash.js')
