--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -1,46 +1,12 @@
 .navbar.navbar-default.navbar-fixed-top
-  .container
-    .navbar-header
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='/')
-        i.fa.fa-cube
-        | Bazaar
-    .collapse.navbar-collapse
-      ul.nav.navbar-nav
-        li(class=title== 'About' ? 'active' : undefined)
-          a(href='/about') About
-        li(class=(title == 'Contact') ? 'active' : undefined)
-          a(href='/contact') Contact
-        li(class=title=='Find Users'?'active':undefined)
-          a(href='/users') Find Users
-      ul.nav.navbar-nav.navbar-right
-        if !user
-          li(class=(title == 'Login') ? 'active' : undefined)
-            a(href='/login') Login
-          li(class=(title == 'Create Account') ? 'active' : undefined)
-            a(href='/signup') Create Account
-        else
-          li
-            a(href="/transactions") #{user.coins} coins
-          li
-            a(href="/messages") Messages (#[span#thread-count #{user.unreadThreads.length}])
-          li.dropdown(class=title=='Account Management'?'active':undefined)
-            a.dropdown-toggle(href='#', data-toggle='dropdown')
-              if user.profile.picture
-                img(src='#{user.profile.picture}')
-              else
-                img(src='/images/person_placeholder.gif')
-              | #{user.profile.name || user.email || user.id}&nbsp;
-              i.caret
-            ul.dropdown-menu
-              li
-                a(href='/account') My Account
-              li
-                a(href='/profile/#{user.id}') View My Profile
-              li.divider
-              li
-                a(href='/logout') Logout
+  .container-fluid
+    a.navbar-brand(href='/')
+      i.fa.fa-cube
+      | Bazaar
+    input.search-box(placeholder="Search for skills...")
+    span.glyphicon.glyphicon-search.white
+    button.navbar-toggle(id='menu-toggle' type='button')
+      span.sr-only Toggle navigation
+      span.icon-bar
+      span.icon-bar
+      span.icon-bar
