--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -258,9 +258,8 @@ textarea {
   }
 
   .action-calls {
-    display: inline-block;
     text-align: center;
-    width: 50%;
+    width: 100%;
     padding: 10px 0px;
 
     &:nth-child(1) {
@@ -292,13 +291,21 @@ textarea {
 }
 
 .profile-request-form {
-  margin: 0 auto;
-  width: 80%;
+  margin: 20px auto 0 auto;
+  width: 90%;
 }
 
 .profile-request-form select {
   width: 100%;
   height: 100px;
+}
+
+.modal-footer {
+  text-align: center;
+}
+
+#submit-skill-request {
+  width: 80%;
 }
 
 // Account page
@@ -345,6 +352,10 @@ input.activity-checkbox {
 
 // Profile page
 
+#requestModal {
+  .service-type {
+  }
+}
 
 .user-profile {
   margin: 0 10%;
