--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -2,6 +2,7 @@ extends ../layout
 
 block content
   include ../partials/newrequest
+  input#csrf_token(type='hidden', name='_csrf', value=_csrf)
   .user-profile
     .row
       .col-md-6
