--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -7,7 +7,7 @@
     li
       a(href='#') Home
     li
-      a(href='#') Notifications
+      a(href='/transactions') Wallet
     li
       a(href='#') Profile
     li
