FIx image icon size

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -310,6 +310,7 @@ input.activity-checkbox {
 
 .message-snippet .profile-pic {
   width: 60px;
+  height: 60px;
   margin-left:2%;
   float:left;
   margin-right: 8px;
