Remove unused client JS code
Since we moved around some pages, some JS
code was unused. Also, no longer need
newmessage.jade since that is being folded
into newrequest.jade - you can no longer
send a naked message without a request
attached to it.

--- a/views/partials/newrequest.jade
+++ b/views/partials/newrequest.jade
@@ -16,5 +16,8 @@
           .form-group
             label.control-label(for="skill") Request one skill:
             .skill-select
+          .form-group
+            label.control-label(for="message-text") Message:
+            textarea#message-text.form-control
       .modal-footer
         button.btn.btn-primary#submit-skill-request(type="button") Request
